fix: 修正文档,新增配置,更改为mysql
