# docs/swagger.json
@@ -64,18 +64,13 @@
                 "summary": "管理员登录",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "用户名",
-                        "name": "username",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "密码",
-                        "name": "password",
-                        "in": "query",
-                        "required": true
+                        "description": "管理员登录信息",
+                        "name": "userInfo",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/v1.AdminLoginReq"
+                        }
                     }
                 ],
                 "responses": {
@@ -316,22 +311,18 @@
                         "required": true
                     },
                     {
+                        "type": "integer",
                         "description": "书籍ID",
                         "name": "bookId",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
+                        "in": "query",
+                        "required": true
                     },
                     {
+                        "type": "integer",
                         "description": "借阅时长（天）",
                         "name": "days",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -530,13 +521,11 @@
                         "required": true
                     },
                     {
+                        "type": "integer",
                         "description": "书籍ID",
                         "name": "bookId",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
+                        "in": "query",
+                        "required": true
                     },
                     {
                         "type": "integer",
@@ -571,6 +560,29 @@
                                     }
                                 }
                             ]
+                        }
+                    }
+                }
+            }
+        },
+        "/ping": {
+            "get": {
+                "description": "测试接口",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "测试"
+                ],
+                "summary": "测试接口",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/Response"
                         }
                     }
                 }
@@ -780,21 +792,12 @@
                 "summary": "读者登陆",
                 "parameters": [
                     {
-                        "description": "学号",
-                        "name": "studentNo",
+                        "description": "读者登陆信息",
+                        "name": "reader",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "密码",
-                        "name": "password",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/v1.LoginReaderReq"
                         }
                     }
                 ],
@@ -842,21 +845,12 @@
                         "required": true
                     },
                     {
-                        "description": "旧密码",
-                        "name": "oldPassword",
+                        "description": "读者修改密码信息",
+                        "name": "req",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "新密码",
-                        "name": "newPassword",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/v1.UpdateReaderPasswordReq"
                         }
                     }
                 ],
@@ -1103,21 +1097,12 @@
                         "required": true
                     },
                     {
-                        "description": "书籍ID",
-                        "name": "bookId",
+                        "description": "预约信息",
+                        "name": "req",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "integer"
-                        }
-                    },
-                    {
-                        "description": "预约时长",
-                        "name": "retain",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
+                            "$ref": "#/definitions/v1.SaveReservationReq"
                         }
                     }
                 ],
@@ -1153,13 +1138,11 @@
                         "required": true
                     },
                     {
+                        "type": "integer",
                         "description": "书籍ID",
                         "name": "bookId",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -1432,12 +1415,72 @@
                 "ReservationStatusCancel"
             ]
         },
+        "v1.AdminLoginReq": {
+            "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "v1.LoginReaderReq": {
+            "type": "object",
+            "required": [
+                "password",
+                "studentNo"
+            ],
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "studentNo": {
+                    "type": "string"
+                }
+            }
+        },
         "v1.LoginResp": {
             "type": "object",
             "properties": {
                 "token": {
                     "type": "string",
                     "example": "xxx"
+                }
+            }
+        },
+        "v1.SaveReservationReq": {
+            "type": "object",
+            "required": [
+                "bookId",
+                "retain"
+            ],
+            "properties": {
+                "bookId": {
+                    "type": "integer"
+                },
+                "retain": {
+                    "type": "integer"
+                }
+            }
+        },
+        "v1.UpdateReaderPasswordReq": {
+            "type": "object",
+            "required": [
+                "newPassword",
+                "oldPassword"
+            ],
+            "properties": {
+                "newPassword": {
+                    "type": "string"
+                },
+                "oldPassword": {
+                    "type": "string"
                 }
             }
         }
